Avoid Line break in printing RSVP's

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -114,6 +114,10 @@ p {
   font-weight: bold;  
 }
 
+#multigroupEvent li {
+   page-break-inside : avoid; 
+}
+
 /* header */
 
 #logo {
